# shared-finance-platform

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/app/: __init__.py  config.py
src/app/api/: health.py
src/shared_finance/: __init__.py  config.py
src/shared_finance/api/: expenses.py  health.py
src/shared_finance/api/dto/: expense_response.py
src/shared_finance/api/mappers/: expense_mapper.py
src/shared_finance/aplication/services/: expense_service.py
src/shared_finance/application/services/: expense_service.py
src/shared_finance/domain/entities/: expense_entitie.py
src/shared_finance/domain/repositories/: expense_repositorie.py
src/shared_finance/infrastructure/config/: settings.py
src/shared_finance/infrastructure/repositories/: in_memory_expense_repository.py
src/shared_finance_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_health.py
tests/api/: test_expenses.py
tests/application/: test_expense_service.py
tests/domain/: test_expense.py
