[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-finance-platform"
version = "0.1.0"
description = "Cloud-native finance platform"
requires-python = ">=3.12"

dependencies = [
    "flask",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]